# API-for-onlinestore

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
nginx/: nginx.conf
onlinestore/: onlinestore-fixture.json
onlinestore/accounts/: api.py  models.py  serializers.py  services.py  swagger_schemas.py  urls.py
onlinestore/accounts/migrations/: 0001_initial.py
onlinestore/catalog/: admin.py  api.py  models.py  serializers.py  services.py  swagger_schemas.py  urls.py  utils.py
onlinestore/catalog/migrations/: 0001_initial.py  0002_image.py  0003_tag_product_tags.py  0004_review.py  0005_specification.py  0006_alter_product_options.py  0007_alter_image_options.py  0008_category_subcategory.py  0009_product_category.py  0010_alter_product_category.py  0011_alter_image_options_alter_product_options.py  0012_tag_category.py  0013_alter_tag_category.py  0014_product_limitededition_product_sortindex.py  0015_product_datefrom_product_dateto_product_saleprice.py  0016_basket_basketitem.py  0017_alter_basket_id.py  0018_remove_basket_session_key.py  0019_alter_basket_id_alter_basketitem_product.py  0020_alter_basketitem_product_and_more.py  0021_alter_basket_user.py  0022_alter_product_category_alter_category_options_and_more.py
onlinestore/onlinestore/: api.py  asgi.py  dao.py  settings.py  urls.py  wsgi.py
onlinestore/orders/: admin.py  api.py  models.py  serializer.py  services.py  swagger_schemas.py  urls.py
onlinestore/orders/migrations/: 0001_initial.py  0002_alter_orderproduct_order_alter_orderproduct_product.py  (+1 more)
(+14 files in other folders)
